Fixed multi system usage

--- a/Complete_System/config.ini
+++ b/Complete_System/config.ini
@@ -5,5 +5,21 @@ WEBCAMERA: 0
 IPCAMERA: 192.168.0.200
 GIGECAMERA: 192.168.0.20
 
-# General settings
+# AUTOSTART
 AUTOSTART: True
+START_WEBCAMERA: True
+START_IPCAMERA: False
+START_GIGECAMERA: False
+
+# Detection
+TENSORFLOW_DETECTION: True
+DLIB_DETECTION: True
+
+# Tracking
+TRACKING: False
+
+# Functions
+AGE_GENDER_ESTIMATION: False
+BLINK_FREQUENCY: False
+EXPRESSION: False
+SKIN_COLOR: False
