Fixed multi tracking and added config for show

--- a/Complete_System/config.ini
+++ b/Complete_System/config.ini
@@ -16,10 +16,18 @@ TENSORFLOW_DETECTION: True
 DLIB_DETECTION: True
 
 # Tracking
-TRACKING: False
+TRACKING: True
 
 # Functions
 AGE_GENDER_ESTIMATION: False
 BLINK_FREQUENCY: False
 EXPRESSION: False
 SKIN_COLOR: False
+
+[SHOW]
+LANDMARKS: True
+DETECTION: True
+TRACKING: True
+BACKPROJECTEDIMAGE: False
+SCORE: False
+GRAYSCALE: False
