--- a/Complete_System/config.ini
+++ b/Complete_System/config.ini
@@ -1,5 +1,4 @@
 [DEFAULT]
-
 # Cameras
 WEBCAMERA: 0
 IPCAMERA: 192.168.0.200
@@ -12,7 +11,7 @@ START_IPCAMERA: False
 START_GIGECAMERA: False
 
 # Detection
-TENSORFLOW_DETECTION: True
+TENSORFLOW_DETECTION: False
 DLIB_DETECTION: True
 
 # Tracking
@@ -31,3 +30,9 @@ TRACKING: True
 BACKPROJECTEDIMAGE: False
 SCORE: False
 GRAYSCALE: False
+
+[LOG]
+LOG_DATA: True
+
+[DEBUG]
+DEBUG: True
