Added expression function code, now all function sperately working, started writing on parser and commented for a logger

--- a/Complete_System/config.ini
+++ b/Complete_System/config.ini
@@ -2,26 +2,25 @@
 # Cameras
 WEBCAMERA: 0
 IPCAMERA: 192.168.0.200
-GIGECAMERA: 192.168.0.20
 
 # AUTOSTART
-AUTOSTART: True
+AUTOSTART: False
 START_WEBCAMERA: True
 START_IPCAMERA: False
-START_GIGECAMERA: False
 
 # Detection
 TENSORFLOW_DETECTION: False
 DLIB_DETECTION: True
 
-# Tracking
+# Tracking (uses detection)
 TRACKING: True
 
-# Functions
+# Functions (run one at a time!)
 AGE_GENDER_ESTIMATION: False
-BLINK_FREQUENCY: False
 EXPRESSION: False
 SKIN_COLOR: False
+# Dlib only!
+BLINK_FREQUENCY: False
 
 [SHOW]
 LANDMARKS: True
@@ -30,6 +29,7 @@ TRACKING: True
 BACKPROJECTEDIMAGE: False
 SCORE: False
 GRAYSCALE: False
+EYES: False
 
 [LOG]
 LOG_DATA: True
