Updated Complete System with opencv functions, also changed detection_box format to list of detections

--- a/Complete_System/config.ini
+++ b/Complete_System/config.ini
@@ -11,6 +11,7 @@ START_IPCAMERA: False
 # Detection
 TENSORFLOW_DETECTION: False
 DLIB_DETECTION: True
+OPENCV_DETECTION: False
 
 # Tracking (uses detection)
 TRACKING: True
