Started updating implementation
Missing camera, will continue tomorrow

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+#
+# These are all packages to make all implementations work
+#
+
 utils
 imutils
-dlib
+
 distance
 numpy
 datetime
-tensorflow
+scipy==1.4.1
+tensorflow==2.2.0
 configparser
 argparse
 Input
 keras
 pynput
 six
-scipy
 requests
-face_recognition
+
 matplotlib
-pip
+
 opencv-python
 pafy
 youtube_dl
+
+cmake
+dlib
+face_recognition
